kubernetes/apps/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: apps
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
